--- a/package.json
+++ b/package.json
@@ -5,74 +5,77 @@
   "main": "index.js",
   "dependencies": {
     "ajv": "^6.12.2",
+    "ascii-table": "^0.0.9",
     "asn1": "^0.2.4",
     "assert-plus": "^1.0.0",
     "async-limiter": "^1.0.1",
     "asynckit": "^0.4.0",
-    "aws4": "^1.9.1",
-    "ascii-table": "^0.0.9",
-    "bcrypt-pbkdf": "^1.0.2",
     "aws-sign2": "^0.7.0",
+    "aws4": "^1.9.1",
     "axios": "^0.19.2",
+    "bcrypt-pbkdf": "^1.0.2",
     "caseless": "^0.12.0",
-    "cjopus": "^0.0.4",
+    "charenc": "^0.0.2",
     "child_process": "^1.0.2",
+    "cjopus": "^0.0.4",
     "combined-stream": "^1.0.8",
     "core-util-is": "^1.0.2",
-    "charenc": "^0.0.2",
     "crypt": "^0.0.2",
+    "dashdash": "^1.14.1",
+    "delayed-stream": "^1.0.0",
+    "discord.io": "^2.5.3",
     "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
     "ecc-jsbn": "^0.1.2",
-    "delayed-stream": "^1.0.0",
     "extend": "^3.0.2",
-    "dashdash": "^1.14.1",
-    "discord.io": "^2.5.3",
     "extsprintf": "^1.3.0",
     "fast-deep-equal": "^3.1.1",
     "fast-json-stable-stringify": "^2.1.0",
     "follow-redirects": "^1.5.10",
+    "forever-agent": "^0.6.1",
     "form-data": "^2.3.3",
     "fs": "^0.0.2",
+    "getpass": "^0.1.7",
     "har-schema": "^2.0.0",
     "har-validator": "^5.1.3",
     "http-signature": "^1.2.0",
-    "getpass": "^0.1.7",
-    "isstream": "^0.1.2",
     "is-typedarray": "^1.0.0",
+    "isstream": "^0.1.2",
     "jsbn": "^0.1.1",
     "json-schema": "^0.2.3",
-    "forever-agent": "^0.6.1",
     "json-schema-traverse": "^0.4.1",
     "json-stringify-safe": "^5.0.1",
     "jsprim": "^1.4.1",
-    "mime-db": "^1.40.0",
     "long": "^4.0.0",
+    "mime-db": "^1.40.0",
     "mime-types": "^2.1.24",
     "ms": "^2.0.0",
+    "oauth-sign": "^0.9.0",
+    "options": "^0.0.6",
     "performance-now": "^2.1.0",
     "prism-media": "^0.0.4",
-    "oauth-sign": "^0.9.0",
     "psl": "^1.8.0",
-    "options": "^0.0.6",
+    "punycode": "^2.1.1",
     "request": "^2.88.2",
     "safe-buffer": "^5.1.2",
-    "punycode": "^2.1.1",
     "safer-buffer": "^2.1.2",
-    "snekfetch": "^3.6.4",
     "sha1": "^1.1.1",
+    "snekfetch": "^3.6.4",
     "sshpk": "^1.16.1",
     "striptags": "^3.1.1",
+    "tough-cookie": "^2.5.0",
     "tunnel-agent": "^0.6.0",
     "tweetnacl": "^0.14.5",
-    "tough-cookie": "^2.5.0",
     "ultron": "^1.0.2",
+    "uri-js": "^4.2.2",
     "uuid": "^3.4.0",
     "verror": "^1.10.0",
-    "uri-js": "^4.2.2",
     "ws": "^1.1.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "cyberchef": "^9.21.0",
+    "jsrsasign": "8.0.16"
+  },
   "scripts": {
     "test": "sudo ./setup.sh"
   },
