--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prism-media": "^0.0.4",
     "psl": "^1.8.0",
     "punycode": "^2.1.1",
+    "puppeteer": "^5.0.0",
     "request": "^2.88.2",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
