--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "The Educational Toolset",
   "main": "index.js",
   "dependencies": {
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.3",
     "ascii-table": "^0.0.9",
     "asn1": "^0.2.4",
     "assert-plus": "^1.0.0",
-    "async-limiter": "^1.0.1",
+    "async-limiter": "^2.0.0",
     "asynckit": "^0.4.0",
     "aws-sign2": "^0.7.0",
-    "aws4": "^1.9.1",
+    "aws4": "^1.10.0",
     "axios": "^0.19.2",
     "bcrypt-pbkdf": "^1.0.2",
     "caseless": "^0.12.0",
@@ -21,31 +21,32 @@
     "combined-stream": "^1.0.8",
     "core-util-is": "^1.0.2",
     "crypt": "^0.0.2",
+    "cyberchef": "^9.21.0",
     "dashdash": "^1.14.1",
     "delayed-stream": "^1.0.0",
     "discord.io": "^2.5.3",
-    "discord.js": "^11.6.4",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "ecc-jsbn": "^0.1.2",
+    "ecc-jsbn": "^0.2.0",
     "extend": "^3.0.2",
     "extsprintf": "^1.3.0",
-    "fast-deep-equal": "^3.1.1",
+    "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
-    "follow-redirects": "^1.5.10",
+    "follow-redirects": "^1.12.1",
     "forever-agent": "^0.6.1",
-    "form-data": "^2.3.3",
-    "fs": "^0.0.2",
+    "form-data": "^3.0.0",
+    "fs": "0.0.1-security",
     "getpass": "^0.1.7",
     "har-schema": "^2.0.0",
     "har-validator": "^5.1.3",
     "http-signature": "^1.2.0",
     "is-typedarray": "^1.0.0",
     "isstream": "^0.1.2",
-    "jsbn": "^0.1.1",
+    "jsbn": "^1.1.0",
     "json-schema": "^0.2.3",
     "json-schema-traverse": "^0.4.1",
     "json-stringify-safe": "^5.0.1",
-    "jsprim": "^1.4.1",
+    "jsprim": "^2.0.0",
     "long": "^4.0.0",
     "mime-db": "^1.40.0",
     "mime-types": "^2.1.24",
@@ -53,29 +54,24 @@
     "oauth-sign": "^0.9.0",
     "options": "^0.0.6",
     "performance-now": "^2.1.0",
-    "prism-media": "^0.0.4",
+    "prism-media": "^1.2.2",
     "psl": "^1.8.0",
     "punycode": "^2.1.1",
-    "puppeteer": "^5.0.0",
+    "puppeteer": "^5.2.0",
     "request": "^2.88.2",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
     "sha1": "^1.1.1",
-    "snekfetch": "^3.6.4",
     "sshpk": "^1.16.1",
     "striptags": "^3.1.1",
     "tough-cookie": "^2.5.0",
     "tunnel-agent": "^0.6.0",
-    "tweetnacl": "^0.14.5",
+    "tweetnacl": "^1.0.3",
     "ultron": "^1.0.2",
     "uri-js": "^4.2.2",
-    "uuid": "^3.4.0",
+    "uuid": "^8.2.0",
     "verror": "^1.10.0",
-    "ws": "^1.1.5"
-  },
-  "devDependencies": {
-    "cyberchef": "^9.21.0",
-    "jsrsasign": "8.0.19"
+    "ws": "^7.3.1"
   },
   "scripts": {
     "setup": "sudo ./setup.sh",
