--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mime-db": "^1.40.0",
     "mime-types": "^2.1.24",
     "ms": "^2.0.0",
+    "npm-force-resolutions": "0.0.3",
     "oauth-sign": "^0.9.0",
     "options": "^0.0.6",
     "performance-now": "^2.1.0",
@@ -64,7 +65,7 @@
     "sha1": "^1.1.1",
     "sshpk": "^1.16.1",
     "striptags": "^3.1.1",
-    "tough-cookie": "^2.5.0",
+    "tough-cookie": "^4.0.0",
     "tunnel-agent": "^0.6.0",
     "tweetnacl": "^1.0.3",
     "ultron": "^1.0.2",
@@ -73,7 +74,12 @@
     "verror": "^1.10.0",
     "ws": "^7.3.1"
   },
+  "resolutions": {
+    "jsrsasign": "8.0.20",
+    "jimp": "0.14.0"
+  },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "setup": "sudo ./setup.sh",
     "start": "node index.js"
   },
@@ -81,10 +87,11 @@
     "type": "git",
     "url": "git+https://github.com/Chadley25/hAxc0rd.git"
   },
-  "author": "Bradley Chavis & David Austad",
+  "author": "Bradley Chavis & David (Thomas) Austad",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Chadley25/hAxc0rd/issues"
   },
-  "homepage": "https://github.com/Chadley25/hAxc0rd#readme"
+  "homepage": "https://github.com/Chadley25/hAxc0rd#readme",
+  "devDependencies": {}
 }
