--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mime-db": "^1.40.0",
     "mime-types": "^2.1.24",
     "ms": "^2.0.0",
+    "nodejs": "0.0.0",
     "npm-force-resolutions": "0.0.3",
     "oauth-sign": "^0.9.0",
     "options": "^0.0.6",
